added nav bar and button on convo view

--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1392,8 +1392,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Efg-3o-aYN"/>
+                    <connections>
+                        <segue destination="9Br-3m-MbI" kind="unwind" identifier="unwindMatches" unwindAction="unwindToMatches:" id="tpg-3C-H4Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gqs-V4-bFd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="9Br-3m-MbI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4137" y="1757"/>
         </scene>
@@ -1429,6 +1433,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ImJ-AB-M5g">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.0" green="0.73725490199999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
